fixed the top-margin on the about me section when on smaller screens

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .about-me p {
-  padding-top: 15px;
+
 }
 
 .about-me img {
@@ -109,6 +109,7 @@ body {
     min-width: 200px;
     margin-right: 20px;
     margin-left: 20px;
+    margin-top: 20px;
   }
 
   .contact {
